# logger

./: .gitignore  LICENSE  makefile  readme.md  requirements-dev.txt  requirements.txt
.github/workflows/: OnRelease.yml  codeql.yml
javascript/: .gitignore  .npmrc  index.mjs  pack.py  package-lock.json  package.json  readme.md  release.md  tsconfig.json  utils.mjs
javascript/config/: jasmine.json
javascript/example/example1/: index.mjs  package-lock.json  package.json
javascript/example/example2/: action.mjs  index.mjs  package-lock.json  package.json
javascript/src/: customTypes.ts  index.ts  utils.ts
javascript/tests/: test.mjs
javascript/tests/helpers/: JsonExporter.js
javascript/tests/modules/: customTypes.spec.mjs  index.spec.mjs  utils.spec.mjs
python/: .gitignore  Makefile  install-requirements.txt  make.py  pack.py  pyproject.toml  readme.md  release.md  requirements.txt
python/example/example1/: main.py  requirements.txt
python/example/example2/: main.py
python/src/: __init__.py  customTypes.py  gamuLogger.py  readme.md  utils.py
python/src/gamuLogger/: __init__.py  customTypes.py  gamuLogger.py  utils.py
python/tests/: customTypes_test.py  gamuLogger_test.py  utils_test.py
